deploy/kubernetes/base.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lago
---
apiVersion: v1
kind: Service
metadata:
  name: lago-api
  namespace: lago
spec:
  selector:
    app.kubernetes.io/name: lago-api
  ports:
    - name: http
      port: 3000
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: lago-front
  namespace: lago
spec:
  selector:
    app.kubernetes.io/name: lago-front
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: lago-pdf
  namespace: lago
spec:
  selector:
    app.kubernetes.io/name: lago-pdf
  ports:
    - name: http
      port: 3000
      targetPort: http
